# 20230422_webScrapingPy_indaialSC

./: .gitignore  README.md  fluxogramaProjeto.pptx  pyproject.toml  requirements.txt  webScraping.ipynb
assets/: propositions_indaial_sc.pbix
project/: fluxogramaAlgoritmo.pptx  webScraping.ipynb
projeto/: Análise.pbix  main.py  webScraping.ipynb
projeto/modulos/: .env  BancoDados.py  CargaIngestao.py  WebScraping.py
src/: .env  BancoDados.py  CargaIngestao.py  main.py
