[tool.poetry]
name = "webscrapping indaial-sc"
version = "0.2.0"
description = "Coleta, armazenamento e atualizações incrementais de dados das proposições de vereadores da prefeitura de Indaial-SC, diretamente de seu site oficial."
authors = ["ylder <yldebran.santana@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
pandas = "^2.2.1"
requests = "^2.31.0"
bs4 = "^0.0.2"
pipdeptree = "^2.17.0"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
